--- a/agriculture.html
+++ b/agriculture.html
@@ -209,9 +209,10 @@ Everyday Life
 
 <div class="calculators-lists">
   <h2>Crop Calculators 🌽</h2>
- 
-    <a href="/agriculture/seed-rate-calculator">Seed Rate Calculator</a>
-    <a href="/agriculture/herbicide-calculator">Herbicide Calculator</a>
+ <ul>
+   <li><a href="/agriculture/seed-rate-calculator">Seed Rate Calculator</a></li>
+   <li><a href="/agriculture/herbicide-calculator">Herbicide Calculator</a></li>
+ </ul>
     
 </div>
   </section>
