--- a/chemistry.html
+++ b/chemistry.html
@@ -207,7 +207,9 @@ Everyday Life
 
 <div class="calculators-lists">
   <h2>General chemistry calculators ⚛️</h2>
-  <a href="/chemistry/atom-calculator">Atom Calculator</a>
+  <ul>
+    <li><a href="/chemistry/atom-calculator">Atom Calculator</a></li>
+  </ul>
 </div>
   </section>
 
