--- a/conversion.html
+++ b/conversion.html
@@ -199,11 +199,17 @@ Everyday Life
 
 <div class="calculators-lists">
   <h2>Numeral systems converters  🔢</h2>
-  <a href="/conversion/roman-numeral-converter">Roman Numeral Converter</a>
-  <a href="/conversion/roman-numeral-date-converter">Roman Numeral Date Converter</a>
+  <ul>
+    <li><a href="/conversion/roman-numeral-converter">Roman Numeral Converter</a></li>
+    <li><a href="/conversion/roman-numeral-date-converter">Roman Numeral Date Converter</a></li>
+  </ul>
+  
   <h2>Time converters 🕰️</h2>
-  <a href="/conversion/hours-to-week-conversion">Hours to Week Conversion</a>
-<a href="/conversion/minutes-to-hours-converter">Minutes to Hours Converter</a>
+  <ul>
+    <li><a href="/conversion/hours-to-week-conversion">Hours to Week Conversion</a></li>
+    <li><a href="/conversion/minutes-to-hours-converter">Minutes to Hours Converter</a></li>
+  </ul>
+
 </div>
   </section>
 
