--- a/ecology.html
+++ b/ecology.html
@@ -199,8 +199,11 @@ Everyday Life
 
 <div class="calculators-lists">
   <h2>Carbon Footprint Calculator ♻️</h2>
- <a href="/ecology/bag-footprint-calculator">Bag Footprint Calculator</a>
- <a href="/ecology/vegan-footprint-calculator">Vegan Footprint Calculator</a>
+ <ul>
+   <li><a href="/ecology/bag-footprint-calculator">Bag Footprint Calculator</a></li>
+   <li><a href="/ecology/vegan-footprint-calculator">Vegan Footprint Calculator</a></li>
+ </ul>
+
 </div>
   </section>
 
