--- a/education.html
+++ b/education.html
@@ -206,9 +206,14 @@ Everyday Life
 
 <div class="calculators-lists">
   <h2>Attendance Calculators 👨‍🏫</h2>
-  <a href="/education/75-attendance-calculator">75 Attendance Calculator</a>
+   <ul>
+   <li><a href="/education/75-attendance-calculator">75 Attendance Calculator</a></li>
+ </ul>
+
  <h2>Nigerian Schools 🇳🇬</h2>
- <a href="/education/cgpa-calculator-nigeria">CGPA Calculator</a>
+  <ul>
+   <li><a href="/education/cgpa-calculator-nigeria">CGPA Calculator</a></li>
+ </ul>
 </div>
   </section>
   
