--- a/everyday-life.html
+++ b/everyday-life.html
@@ -209,22 +209,26 @@ Everyday Life
 <div class="calculators-lists">
 
 <h2>Time and Date 📆</h2>
+ <ul>
+   <li><a href="/everyday-life/age-calculator">Age Calculator</a></li>
+   <li><a href="/everyday-life/age-difference-calculator">Age Difference Calculator</a></li>
+   <li><a href="/everyday-life/time-calculator">Time Calculator</a>
+</li>
+   <li><a href="/everyday-life/christmas-countdown">Christmas Countdown</a></li>
+   <li><a href="/everyday-life/earth-day-countdown">Earth Day Countdown</a></li>
+   <li><a href="/everyday-life/new-year-countdown-calculator">New Year Countdown Calculator</a></li>
+   <li><a href="/everyday-life/halloween-countdown-calculator">Halloween Countdown Calculator</a></li>
+   <li><a href="/everyday-life/easter-countdown">Easter Countdown</a>
+</li>
+   <li><a href="/everyday-life/childrens-day-countdown">Children's Day Countdown</a></li>
+   <li><a href="/everyday-life/valentines-day-countdown">Valentine's Day Countdown</a></li>
+   <li><a href="/everyday-life/mothers-day-countdown">Mother's Day Countdown</a></li>
+   <li><a href="/everyday-life/fathers-day-countdown">Father's Day Countdown</a></li>
+   <li><a href="/everyday-life/labour-day">Labour Day Countdown</a></li>
+   <li><a href="/everyday-life/world-environment-day">World Environment Day Countdown</a></li>
+   <li><a href="/everyday-life/world-health-day">World Health Day Countdown</a></li>
+ </ul>
 
-<a href="/everyday-life/age-calculator">Age Calculator</a>
-<a href="/everyday-life/age-difference-calculator">Age Difference Calculator</a>
-<a href="/everyday-life/time-calculator">Time Calculator</a>
-<a href="/everyday-life/christmas-countdown">Christmas Countdown</a>
-<a href="/everyday-life/earth-day-countdown">Earth Day Countdown</a>
-<a href="/everyday-life/new-year-countdown-calculator">New Year Countdown Calculator</a>
-<a href="/everyday-life/halloween-countdown-calculator">Halloween Countdown Calculator</a>
-<a href="/everyday-life/easter-countdown">Easter Countdown</a>
-<a href="/everyday-life/childrens-day-countdown">Children's Day Countdown</a>
-<a href="/everyday-life/valentines-day-countdown">Valentine's Day Countdown</a>
-<a href="/everyday-life/mothers-day-countdown">Mother's Day Countdown</a>
-<a href="/everyday-life/fathers-day-countdown">Father's Day Countdown</a>
-<a href="/everyday-life/labour-day">Labour Day Countdown</a>
-<a href="/everyday-life/world-environment-day">World Environment Day Countdown</a>
-<a href="/everyday-life/world-health-day">World Health Day Countdown</a>
 </div>
   </section>
 
