--- a/finance.html
+++ b/finance.html
@@ -206,25 +206,38 @@ Everyday Life
 
 <div class="calculators-lists">
   <h2>Mortgage and real estate calculators 💰</h2>
-  <a href="/finance/rent-calculator">Rent Calculator</a>
+  <ul>
+    <li><a href="/finance/rent-calculator">Rent Calculator</a></li>
+  </ul>
+  
 <h2>Tax and salary calculators  💸</h2>
-<a href="/finance/vat-calculator">VAT Calculator</a>
-<a href="/finance/sales-tax-calculator">Sales Tax Calculator</a>
-<a href="/finance/custom-duty-calculator-for-vehicles-nigeria">Custom Duty Calculator for vehicles Nigeria</a>
-<a href="/finance/nigeria-personal-income-tax-calculator">Nigeria Personal Income Tax Calculator</a>
+ <ul>
+   <li><a href="/finance/vat-calculator">VAT Calculator</a></li>
+   <li><a href="/finance/sales-tax-calculator">Sales Tax Calculator</a></li>
+   <li><a href="/finance/custom-duty-calculator-for-vehicles-nigeria">Custom Duty Calculator for vehicles Nigeria</a></li>
+   <li><a href="/finance/nigeria-personal-income-tax-calculator">Nigeria Personal Income Tax Calculator</a></li>
+ </ul>
 
 <h2>General investment calculators 📈</h2>
-<a href="/finance/cd-calculator">CD Calculator</a>
-<a href="/finance/apy-calculator">APY Calculator</a>
-<a href="/finance/roi-calculator">ROI Calculator</a>
-<a href="/finance/Interest-rate-calculator">Interest Rate Calculator</a>
-<h2>Debt investment calculators 💳</h2>
-<a href="/finance/bond-calculator">Bond Calculator</a>
-<a href="/finance/bond-price-calculator">Bond Price Calculator</a>
-<h2>Other 🤷</h2>
+ <ul>
+   <li><a href="/finance/cd-calculator">CD Calculator</a></li>
+   <li><a href="/finance/apy-calculator">APY Calculator</a></li>
+   <li><a href="/finance/roi-calculator">ROI Calculator</a></li>
+   <li><a href="/finance/Interest-rate-calculator">Interest Rate Calculator</a></li>
+ </ul>
 
-<a href="/finance/website-ad-revenue-calculator">Website Ad Revenue Calculator</a>
-<a href="/finance/mobile-app-ad-revenue-calculator">Mobile App Ad Revenue Calculator</a>
+<h2>Debt investment calculators 💳</h2>
+ <ul>
+   <li><a href="/finance/bond-calculator">Bond Calculator</a></li>
+   <li><a href="/finance/bond-price-calculator">Bond Price Calculator</a></li>
+ </ul>
+
+<h2>Other 🤷</h2>
+ <ul>
+   <li><a href="/finance/website-ad-revenue-calculator">Website Ad Revenue Calculator</a></li>
+   <li><a href="/finance/mobile-app-ad-revenue-calculator">Mobile App Ad Revenue Calculator</a></li>
+ </ul>
+
 </div>
   </section>
 
