--- a/health.html
+++ b/health.html
@@ -208,14 +208,20 @@ Whether you have ever wondered roughly how much of your body blood is, or how to
 
 <div class="calculators-lists">
   <h2>Gynecology & pregnancy calculators 🤰</h2>
-  <a href="/health/conception-calculator">Conception Calculator</a>
-  <a href="/health/ovulation-calculator">Ovulation Calculator</a>
+   <ul>
+   <li><a href="/health/conception-calculator">Conception Calculator</a></li>
+   <li><a href="/health/ovulation-calculator">Ovulation Calculator</a></li>
+ </ul>
  
 <h2>Dietary calculators 🍔</h2>
+ <ul>
+   <li><a href="/everyday-life">Fat Intake Calculator</a></li>
+ </ul>
 
-<a href="/everyday-life">Fat Intake Calculator</a>
 <h2>Urology & nephrology calculators 👨‍⚕️</h2>
-<a href="/health/gfr-calculator">GFR Calculator</a>
+<ul>
+  <li><a href="/health/gfr-calculator">GFR Calculator</a></li>
+</ul>
 </div>
   </section>
 
