--- a/other.html
+++ b/other.html
@@ -208,32 +208,52 @@ This is where you will find the bad scrouts the outliers, the calculators of the
 <div class="calculators-lists">
  
 <h2>YouTube Calculators ▶️</h2>
-<a href="/other/youtube-watch-time-calculator">YouTube Watch Time Calculator</a>
-<a href="/other/youtube-ad-revenue-calculator">Youtube Ad Revenue Calculator</a>
-<a href="/other/youtube-cpm-calculator">YouTube CPM Calculator</a>
+ <ul>
+   <li><a href="/other/youtube-watch-time-calculator">YouTube Watch Time Calculator</a></li>
+   <li><a href="/other/youtube-ad-revenue-calculator">Youtube Ad Revenue Calculator</a></li>
+   <li><a href="/other/youtube-cpm-calculator">YouTube CPM Calculator</a></li>
+ </ul>
 
 <h2>Internet and network calculators 🛜</h2>
+<ul>
+  <li><a href="/other/upload-time-calculator">Upload Time Calculator</a></li>
+  <li><a href="/other/download-time-calculator">Download Time Calculator calculator</a></li>
+  <li><a href="/other/website-bandwidth-calculator">Website Bandwidth Calculator</a></li>
+</ul>
 
-<a href="/other/upload-time-calculator">Upload Time Calculator</a>
-<a href="/other/download-time-calculator">Download Time Calculator calculator</a>
-<a href="/other/website-bandwidth-calculator">Website Bandwidth Calculator</a>
 <h2>Gaming 🎮</h2>
-
-<a href="/other/edpi-calculator">eDPI Calculator</a>
+ <ul>
+   <li><a href="/other/edpi-calculator">eDPI Calculator</a></li>
+ </ul>
 
 <h2>Marketing 🔖</h2>
-<a href="/other/ctr-calculator">CTR Calculator</a>
+<ul>
+  <li><a href="/other/ctr-calculator">CTR Calculator</a></li>
+</ul>
+
 <h2>Facebook 🪧</h2>
-<a href="/other/facebook-ads-cost-calculator">Facebook Ads Cost Calculator</a>
-<a href="/other/facebook-money-calculator">Facebook Money Calculator</a>
+<ul>
+  <li><a href="/other/facebook-ads-cost-calculator">Facebook Ads Cost Calculator</a></li>
+  <li><a href="/other/facebook-money-calculator">Facebook Money Calculator</a></li>
+</ul>
+
 <h2>TikTok 🎦</h2>
-<a href="/other/tiktok-coin-calculator">TikTok Coin Calculator </a>
-<a href="/other/tiktok-diamonds-calculator">TikTok Diamonds Calculator</a>
-<a href="/other/tiktok-money-calculator">TikTok Money Calculator</a>
+ <ul>
+   <li><a href="/other/tiktok-coin-calculator">TikTok Coin Calculator </a></li>
+   <li><a href="/other/tiktok-diamonds-calculator">TikTok Diamonds Calculator</a></li>
+   <li><a href="/other/tiktok-money-calculator">TikTok Money Calculator</a></li>
+ </ul>
+
 <h2>Whop 🎥</h2>
-<a href="/other/whop-revenue-calculator">Whop Revenue Calculator </a>
+<ul>
+  <li><a href="/other/whop-revenue-calculator">Whop Revenue Calculator </a></li>
+</ul>
+
 <h2>Other 🤔</h2>
-<a href="/other/tip-calculator">Tip Calculator</a>
+<ul>
+  <li><a href="/other/tip-calculator">Tip Calculator</a></li>
+</ul>
+
 </div>
   </section>
 
