--- a/physics.html
+++ b/physics.html
@@ -209,7 +209,10 @@ To students, to teachers, to experts in research, or to the layperson whose inte
 
 <div class="calculators-lists">
   <h2>Energy, work, and power calculators ⚡</h2>
-  <a href="/physics/bullet-energy-calculator">Bullet Energy Calculator</a>
+  <ul>
+   <li><a href="/physics/bullet-energy-calculator">Bullet Energy Calculator</a></li>
+ </ul>
+
 </div>
   </section>
 
