--- a/sports.html
+++ b/sports.html
@@ -205,8 +205,11 @@ Everyday Life
 
 <div class="calculators-lists">
   <h2>Baseball Calculators 🥎</h2>
-  <a href="/sports/on-base-percentage-calculator">On Base Percentage Calculator</a>
-</div>
+   <ul>
+   <li><a href="/sports/on-base-percentage-calculator">On Base Percentage Calculator</a>
+</li>
+ </ul>
+  </div>
   </section>
 
 <footer>
