--- a/statistics.html
+++ b/statistics.html
@@ -210,8 +210,11 @@ Everyday Life
 
 <div class="calculators-lists">
   <h2>Probability theory and randomizer calculators 🫡</h2>
-  <a href="/statistics/coin-flipper">Coin Flipper</a>
-<a href="/statistics/risk-calculator">Risk Calculator</a>
+  <ul>
+   <li><a href="/statistics/coin-flipper">Coin Flipper</a></li>
+   <li><a href="/statistics/risk-calculator">Risk Calculator</a>
+</li>
+ </ul>
 </div>
   </section>
 
