--- a/construction.html
+++ b/construction.html
@@ -198,7 +198,9 @@ Everyday Life
 
 <div class="calculators-lists">
 <h2>Construction converters 👷</h2>
-<a href="/construction/square-footage-calculator">Square Footage Calculator</a>
+<ul>
+  <li><a href="/construction/square-footage-calculator">Square Footage Calculator</a></li>
+</ul>
 </div>
   </section>
 
