--- a/math.html
+++ b/math.html
@@ -206,13 +206,21 @@ Everyday Life
 <div class="calculators-lists">
 
   <h2>Arithmetic calculators 🧮</h2>
-  <a href="/math/mean-calculator">Mean Calculator</a>
+   <ul>
+   <li><a href="/math/mean-calculator">Mean Calculator</a></li>
+ </ul>
+  
   <h2>Algebra calculators 🔡</h2>
-  <a href="/math/foil-calculator">Foil Calculator</a>
+  <ul>
+    <li><a href="/math/foil-calculator">Foil Calculator</a></li>
+  </ul>
   <h2>Percentage Calculators 💯</h2>
-  <a href="/math/decimal-to-percent-converter">Decimal to Percent Converter</a>
-  <a href="/math/percentage-calculator">Percentage Calculator </a>
-  <a href="/math/percent-off-calculator">Percent Off Calculator</a>
+  <ul>
+    <li><a href="/math/decimal-to-percent-converter">Decimal to Percent Converter</a></li>
+    <li><a href="/math/percentage-calculator">Percentage Calculator </a></li>
+    <li><a href="/math/percent-off-calculator">Percent Off Calculator</a></li>
+  </ul>
+ 
 </div>
   </section>
 
