--- a/food/grams-to-cups-converter.html
+++ b/food/grams-to-cups-converter.html
@@ -372,9 +372,7 @@ Clear all changes
     <div class="similar-calculators-wrap">
       <h2>Similar Calculators</h2>
       <div class="similar-calculators">
-        <a href="/other/upload-time-calculator">Upload Time Calculator</a>
-        <a href="#">Crop Yield Calculator</a>
-        <a href="#">Pesticide Calculator</a>
+       <a href="/food/coffee-calculator">Coffee Calculator</a>
       </div>
     </div>
 <article class="description-txt">
