--- a/math/decimal-to-percent-converter.html
+++ b/math/decimal-to-percent-converter.html
@@ -13,14 +13,14 @@
 
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content="">
+<meta name="description" content="Convert decimal to percentage or vice versa.">
 
 <link rel="canonical" href="https://calclulo.com/math/decimal-to-percent-converter">
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/math/decimal-to-percent-converter">
 <meta property="og:title" content="Decimal to Percent Converter">
-<meta property="og:description" content="">
+<meta property="og:description" content="Convert decimal to percentage or vice versa.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48">
@@ -33,7 +33,7 @@
     "@type": "WebPage",
     "name": "Decimal to Percent Converter",
     "url": "https://calclulo.com/math/decimal-to-percent-converter",
-    "description": "",
+    "description": "Convert decimal to percentage or vice versa.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -314,7 +314,7 @@ Clear all changes
 <article class="description-txt">
    <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
    <p>
-     
+     With our decimal to percent converter you will be able to Convert decimal to percentage or vice versa.
    </p>
  </article>
   </section>
