--- a/math/foil-calculator.html
+++ b/math/foil-calculator.html
@@ -13,14 +13,14 @@
 
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content="">
+<meta name="description" content="Our FOIL Calculator will explain to you the process of multiplying two binomials with the help of the famous FOIL method.">
 
 <link rel="canonical" href="https://calclulo.com/math/foil-calculator">
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/math/foil-calculator">
 <meta property="og:title" content="Foil Calculator">
-<meta property="og:description" content="">
+<meta property="og:description" content="Our FOIL Calculator will explain to you the process of multiplying two binomials with the help of the famous FOIL method.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
@@ -31,7 +31,7 @@
     "@type": "WebPage",
     "name": "Foil Calculator",
     "url": "https://calclulo.com/math/foil-calculator",
-    "description": "",
+    "description": "Our FOIL Calculator will explain to you the process of multiplying two binomials with the help of the famous FOIL method.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -507,8 +507,10 @@ Clear all changes
 <article class="description-txt">
    <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
    <p>
-     
+     The FOIL Calculator expands two binomials using the First, Outer, Inner, Last method.
    </p>
+   <h2 class="not-hd">What is the FOIL method?</h2>
+   <p>The FOIL process is a simple rule in algebra that is used to multiply two binomials and the name is based on the order of operation namely First, Outer, Inner, Last. This follows by multiplying the first terms of each binomial, then the outer terms, then, then the inner terms, and then the last terms after which all the results are added. As an example, expanding gives you  without any loss in the expression. The technique is particularly useful to people who are learning the multiplication of polynomials among beginners as it offers a systematic step-by-step procedure that reduces errors. Although FOIL is commonly presented at the beginning of algebra to make the learning process easier, it may also be applied to more advanced expressions by taking the same rational behind the same reasoning.</p>
  </article>
   </section>
 
