--- a/math/percentage-calculator.html
+++ b/math/percentage-calculator.html
@@ -13,14 +13,14 @@
 
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content="">
+<meta name="description" content="This percentage calculator computes a figure of values that deal with percentages.">
 
 <link rel="canonical" href="https://calclulo.com/math/percentage-calculator">
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/math/percentage-calculator">
 <meta property="og:title" content="Percentage Calculator">
-<meta property="og:description" content="">
+<meta property="og:description" content="This percentage calculator computes a figure of values that deal with percentages.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
@@ -31,7 +31,7 @@
     "@type": "WebPage",
     "name": "Percentage Calculator",
     "url": "https://calclulo.com/math/percentage-calculator",
-    "description": "",
+    "description": "This percentage calculator computes a figure of values that deal with percentages.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -351,9 +351,9 @@ Clear all changes
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
-     
+     This percentage calculator computes a number of values involving percentages.
    </p>
  </article>
   </section>
