--- a/food/coffee-calculator.html
+++ b/food/coffee-calculator.html
@@ -567,7 +567,7 @@ Clear all changes
 <article class="description-txt">
    <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
-     The coffee calculator let's you calculate  the amount of coffee you need, comparing it to the recommended healthy amount.
+     The coffee calculatorletsyou calculate  the amount of coffee you need, comparing it to the recommended healthy amount.
    </p>
    <h2 class="not-hd">How to use the coffee calculator</h2>
    <p>Using the calculator is simple and straightforward:</p>
