--- a/finance/bond-calculator.html
+++ b/finance/bond-calculator.html
@@ -524,7 +524,7 @@ Clear all changes
 <article class="description-txt">
    <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
-The Bond Calculator let's you Calculate the price of bonds traded at the coupon date.
+The Bond Calculatorletsyou Calculate the price of bonds traded at the coupon date.
    </p>
    <h2 class="not-hd">How to use the bond calculator</h2>
    <p>To use the bond calculator follow these steps:</p>
