--- a/finance/bond-price-calculator.html
+++ b/finance/bond-price-calculator.html
@@ -13,14 +13,14 @@
 
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content="The Bond Price Calculator let's you determine your bond’s value.">
+<meta name="description" content="The Bond Price Calculatorletsyou determine your bond’s value.">
 
 <link rel="canonical" href="https://calclulo.com/finance/bond-price-calculator">
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/finance/bond-price-calculator">
 <meta property="og:title" content="Bond Price Calculator">
-<meta property="og:description" content="The Bond Price Calculator let's you determine your bond’s value.">
+<meta property="og:description" content="The Bond Price Calculatorletsyou determine your bond’s value.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
@@ -31,7 +31,7 @@
     "@type": "WebPage",
     "name": "Bond Price Calculator",
     "url": "https://calclulo.com/finance/bond-price-calculator",
-    "description": "The Bond Price Calculator let's you determine your bond’s value.",
+    "description": "The Bond Price Calculatorletsyou determine your bond’s value.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
