--- a/finance/vat-calculator.html
+++ b/finance/vat-calculator.html
@@ -452,7 +452,7 @@ Clear all changes
 <article class="description-txt">
    <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
-     The VAT Calculator let's you calculate the value added tax of a product or service.
+     The VAT Calculatorletsyou calculate the value added tax of a product or service.
    </p>
    <h2 class="not-hd">VAT definition</h2>
    <p>Value Added Tax (VAT) is a type of consumption taxes levied on sale of goods and services within every stage of production and distribution with value added. Rather than a business receiving one payment only when a final consumer purchases the product, VAT is levied progressively on businesses: a seller charges VAT on his sales and is often able to recover the amount of VAT he paid during his purchases. The overall impact is that the ultimate consumer ends up paying the taxes, whilst companies are tax collectors to the government.
