--- a/conversion/hours-to-week-conversion.html
+++ b/conversion/hours-to-week-conversion.html
@@ -191,7 +191,7 @@ Everyday Life
     
     <div class="currency-or-unit-input">
   <input   inputmode="numeric" pattern="[0-9]*" type="text" id="Hours">
-  <span style="padding-right: 10px;color: #464BFF;" class="unit-display">hours
+  <span  class="unit-display">hours
   </span>
 </div>
 
@@ -242,7 +242,7 @@ Everyday Life
     
     <div class="currency-or-unit-input">
   <input inputmode="numeric" pattern="[0-9]*" type="text" id="weeks">
-  <span style="padding-right: 10px;color: #464BFF;" class="unit-display">weeks
+  <span  class="unit-display">weeks
   </span>
 </div>
 
