--- a/finance/vat-calculator.html
+++ b/finance/vat-calculator.html
@@ -187,7 +187,7 @@ Everyday Life
     
     <div class="currency-or-unit-input">
   <input   inputmode="numeric" pattern="[0-9]*" type="text" id="vatRate">
-  <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
+  <span  class="unit-display">%
   </span>
 </div>
     <span class="input-tips">Enter VAT percentvat rate (e.g. 15 for 15%).</span>
