--- a/math/percent-off-calculator.html
+++ b/math/percent-off-calculator.html
@@ -242,7 +242,7 @@ Everyday Life
     
     <div class="currency-or-unit-input">
   <input  inputmode="numeric" pattern="[0-9]*" type="text" id="percentOff">
-  <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
+  <span  class="unit-display">%
   </span>
 </div>
     <div class="input-options">
@@ -320,7 +320,7 @@ Everyday Life
     
     <div class="currency-or-unit-input">
   <input inputmode="numeric" pattern="[0-9]*" type="text" id="salesTax">
-  <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
+  <span  class="unit-display">%
   </span>
 </div>
     <div class="input-options">
