--- a/statistics/risk-calculator.html
+++ b/statistics/risk-calculator.html
@@ -190,7 +190,7 @@ Everyday Life
   
   <div class="currency-or-unit-input">
   <input   inputmode="numeric" pattern="[0-9]*" type="text" id="probabilityOfFailureOne">
-  <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
+  <span  class="unit-display">%
   </span>
 </div>
   <div class="input-options">
@@ -330,7 +330,7 @@ Everyday Life
     
     <div class="currency-or-unit-input">
   <input   inputmode="numeric" pattern="[0-9]*" type="text" id="probabilityOfFailureTwo">
-  <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
+  <span  class="unit-display">%
   </span>
 </div>
 
