--- a/agriculture/herbicide-calculator.html
+++ b/agriculture/herbicide-calculator.html
@@ -340,7 +340,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   
 <input   inputmode="numeric" pattern="[0-9]*" type="text" id="volumeOfHerbicide">
-<span style="padding-right: 10px;" class="unit-display" >ml
+<span class="unit-display" >ml
 </span>
   </div>
   <div class="input-options">
