--- a/agriculture/seed-rate-calculator.html
+++ b/agriculture/seed-rate-calculator.html
@@ -274,7 +274,7 @@ Everyday Life
   <div class="currency-or-unit-input">
   
   <input inputmode="numeric" pattern="[0-9]*" type="text" id="germination">
-  <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
+  <span class="unit-display">%
   </span>
 </div>
 
@@ -325,7 +325,7 @@ Everyday Life
   <div class="currency-or-unit-input">
   
   <input   inputmode="numeric" pattern="[0-9]*" type="text" id="fieldLosses">
-  <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
+  <span class="unit-display">%
   </span>
 </div>
   <span class="input-tips">Percentage loss expected in the field</span>
