--- a/education/75-attendance-calculator.html
+++ b/education/75-attendance-calculator.html
@@ -358,7 +358,7 @@ Everyday Life
 <div class="currency-or-unit-input">
   
   <input  inputmode="numeric" pattern="[0-9]*" value="75" type="text" id="requiredAttendanceOutput">
-  <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
+  <span  class="unit-display">%
   </span>
 </div>
 
