--- a/finance/bond-price-calculator.html
+++ b/finance/bond-price-calculator.html
@@ -231,7 +231,7 @@ Everyday Life
     
     <div class="currency-or-unit-input">
   <input   inputmode="numeric" pattern="[0-9]*" type="text" id="yield-input">
-  <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
+  <span  class="unit-display">%
   </span>
 </div>
     <div class="input-options">
