--- a/finance/rent-calculator.html
+++ b/finance/rent-calculator.html
@@ -329,7 +329,7 @@ Everyday Life
     
     <div class="currency-or-unit-input">
   <input   inputmode="numeric" pattern="[0-9]*" type="text" id="rent-ratio">
-  <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
+  <span  class="unit-display">%
   </span>
 </div>
     <span class="input-tips">30% is the commonly used rule.</span>
