--- a/finance/sales-tax-calculator.html
+++ b/finance/sales-tax-calculator.html
@@ -240,7 +240,7 @@ Everyday Life
     
     <div class="currency-or-unit-input">
   <input   inputmode="numeric" pattern="[0-9]*" type="text" id="taxRate">
-  <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
+  <span  class="unit-display">%
   </span>
 </div>
     <span class="input-tips">Enter the sales tax rate as a percentage.</span>
