--- a/math/decimal-to-percent-converter.html
+++ b/math/decimal-to-percent-converter.html
@@ -237,7 +237,7 @@ Everyday Life
     
     <div class="currency-or-unit-input">
   <input  inputmode="numeric" pattern="[0-9]*" type="text" id="percent">
-  <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
+  <span  class="unit-display">%
   </span>
 </div>
     <div class="input-options">
