--- a/other/tip-calculator.html
+++ b/other/tip-calculator.html
@@ -233,7 +233,7 @@ Everyday Life
     
     <div class="currency-or-unit-input">
   <input inputmode="numeric" pattern="[0-9]*" type="text" id="tip-percent-tip-calculator">
-  <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
+  <span  class="unit-display">%
   </span>
 </div>
     <div class="input-options">
