--- a/other/youtube-watch-time-calculator.html
+++ b/other/youtube-watch-time-calculator.html
@@ -328,7 +328,7 @@ Everyday Life
 
   <div class="currency-or-unit-input">
   <input   inputmode="numeric" pattern="[0-9]*" type="text" id="retention">
-  <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
+  <span  class="unit-display">%
   </span>
 </div>
   <span class="input-tips">Average percentage of your video that viewers watch.</span>
